fix: dark mode toolbar border colour

--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,7 @@ body {
 .sidebar.dark{
   background-color: #222;
   color: white;
+  border-left: 1px solid #444;
 }
 .sidebar.dark .dndnode{
   border: 1px solid #999;
@@ -577,7 +578,7 @@ body {
   padding: 10px;
   gap: 10px;
   background-color: #f7f7f7;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #9e9e9e;
   align-items: center;
   user-select: none;
 }
